index.css
html,
body {
	padding: 0;
	margin: 0;
	height: 100%;
}

body {
	font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif;
}

header {
	position: absolute;
	width: 500px;
	height: 250px;
	top: 50%;
	left: 50%;
	margin-top: -125px;
	margin-left: -250px;
	text-align: center;
}

header h1 {
	font-size: 50px;
	font-weight: 100;
	margin: 0;
	padding: 0;
}

.menu {
	height: 35px;
	width: 100%;
	background-color: darkmagenta;
}

.container {
	height: 100%;
	display: flex;
	display: -webkit-flex;
}

#sidebar {
    width: 150px;
    background-color:rgb(38, 50, 56);
}

#feeds {
	width: 250px;
	overflow: hidden;
	background-color: yellow;
}

#feeds:hover {
	overflow-y: scroll;
}

#feed-active{
	color: coral;
}

.feed {
	
}

#preview {
	flex: 1;
	background-color: green;
}

